--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -4,12 +4,19 @@ h1{
     font-family: 'Times New Roman', Times, serif
 }
 ul{
-    border: 1px solid red;
-    margin: 20px 20px;
-    padding: 10px 500px;
+    background-color:beige;
+    border: 1px soliopend red;
 }
-li{
+.nav-list{
+    display: flex; 
+    margin: 0px;
+    padding: 0px;
+    flex-wrap: wrap;
+    list-style: none;
+    flex-direction: row;
+}
+.nav-list li{
     border: 1px solid red;
-    padding: 10px;
-    display: inline-block;
+    margin: 10px;
+    flex: 1;
 }
