--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -5,18 +5,21 @@ h1{
 }
 ul{
     background-color:beige;
-    border: 1px soliopend red;
+    border: 1px solid red;
 }
 .nav-list{
     display: flex; 
-    margin: 0px;
-    padding: 0px;
-    flex-wrap: wrap;
+    /* margin: 0px; */
+    /* padding: 0px; */
+    /* flex-wrap: wrap; */
     list-style: none;
-    flex-direction: row;
+    flex-direction: column;
+
+    
+
 }
 .nav-list li{
-    border: 1px solid red;
-    margin: 10px;
-    flex: 1;
+    border: 1px solid wheat;
+    flex: 1 1 auto;
+    height: 90px;
 }
