--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -5,11 +5,6 @@
 
 }
 
-ul{
-    background-color:beige;
-    padding: 30px;
-    
-}
 
 .nav-list{
     display: flex; 
@@ -19,13 +14,14 @@ ul{
     justify-content: center;
     gap: 40px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-
 }
 .nav-list li{
-    border: 1px solid red;
-    height: 40px;
+    height: 30px;
     align-content: center;
+    padding: 5px;
+    
 }
 a{
     text-decoration: none;
+    color: black;
 }
